crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__region__tests__status_entry.snap
---
source: crates/thndrs/src/cli/renderer/region/tests.rs
expression: contents
---
│                                                                                   # [-]=                                                                                
│   │ Context                                                                       # [-]=   [fg=#6473b7]=│  [fg=#6473b7 b]=Context [-]=                                                                    [-]=  
│   │ context AGENTS.md (scope: .)                                                  # [-]=   [fg=#6473b7]=│  [fg=#ebfafa]=context AGENTS.md (scope: .) [-]=                                               [-]=
