crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__region__tests__streaming_tool_with_output.snap
---
source: crates/thndrs/src/cli/renderer/region/tests.rs
expression: contents
---
│     (none)                                                                        # [bg=#171928]=   [fg=#ebfafa bg=#171928]=  (none) [bg=#171928]=                                                                     [bg=#171928]=  
│   ─────────────────────────────────────────────────────────────────────────       # [bg=#171928]=   [fg=#3b4261 bg=#171928]=───────────────────────────────────────────────────────────────────────── [bg=#171928]=    [bg=#171928]=  
│   SKILLS                                                                          # [bg=#171928]=   [fg=#04d1f9 bg=#171928 b]=SKILLS [bg=#171928]=                                                                       [bg=#171928]=  
│     (none)                                                                        # [bg=#171928]=   [fg=#abb4da bg=#171928]=  (none) [bg=#171928]=                                                                     [bg=#171928]=  
│   ─────────────────────────────────────────────────────────────────────────       # [bg=#171928]=   [fg=#3b4261 bg=#171928]=───────────────────────────────────────────────────────────────────────── [bg=#171928]=    [bg=#171928]=  
│   SEARCH                                                                          # [bg=#171928]=   [fg=#04d1f9 bg=#171928 b]=SEARCH [bg=#171928]=                                                                       [bg=#171928]=  
│     native: Umans server-side search; DuckDuckGo HTML fallback via                # [bg=#171928]=   [fg=#abb4da bg=#171928]=  native: Umans server-side search; DuckDuckGo HTML fallback via [bg=#171928]=             [bg=#171928]=  
│     web_search tool                                                               # [bg=#171928]=   [fg=#abb4da bg=#171928]=  web_search tool [bg=#171928]=                                                            [bg=#171928]=  
│   ─────────────────────────────────────────────────────────────────────────       # [bg=#171928]=   [fg=#3b4261 bg=#171928]=───────────────────────────────────────────────────────────────────────── [bg=#171928]=    [bg=#171928]=  
│   Ask for a change, run a command, or inspect this repo.                          # [bg=#171928]=   [fg=#abb4da bg=#171928]=Ask for a change, run a command, or inspect this repo. [bg=#171928]=                       [bg=#171928]=  
│                                                                                   # [bg=#171928]=                                                                                
│   ? help /model /search                                                           # [bg=#171928]=   [fg=#04d1f9 bg=#171928]=? help /model /search [bg=#171928]=                                                        [bg=#171928]=  
│                                                                                   # [bg=#171928]=                                                                                
│                                                                                   # [bg=#171928]=                                                                                
│   │ · run_shell [running]  program: cargo test                                    # [bg=#171928]=   [fg=#f7c67f bg=#171928]=│  [fg=#f7c67f bg=#171928]=·  [fg=#ebfafa bg=#171928 b]=run_shell [fg=#f7c67f bg=#171928]= [running] [bg=#171928]=   [fg=#abb4da bg=#171928]=program: cargo test [bg=#171928]=                                 [bg=#171928]=  
│   │    │ running 3 tests                                                          # [bg=#171928]=   [fg=#f7c67f bg=#171928]=│  [fg=#3b4261 bg=#171928]=   │  [fg=#8fa1b3 bg=#171928]=running [fg=#c0c5ce bg=#171928]= 3 tests [bg=#171928]=                                                       [bg=#171928]=  
│   │    │ test tests::foo ... ok                                                   # [bg=#171928]=   [fg=#f7c67f bg=#171928]=│  [fg=#3b4261 bg=#171928]=   │  [fg=#8fa1b3 bg=#171928]=test [fg=#c0c5ce bg=#171928]= tests::foo ... ok [bg=#171928]=                                                [bg=#171928]=  
│   │    │ test tests::bar ... ok                                                   # [bg=#171928]=   [fg=#f7c67f bg=#171928]=│  [fg=#3b4261 bg=#171928]=   │  [fg=#8fa1b3 bg=#171928]=test [fg=#c0c5ce bg=#171928]= tests::bar ... ok [bg=#171928]=                                                [bg=#171928]=  
│                                                                                   # [bg=#171928]=                                                                                
│                                                                                   # [bg=#212337]=                                                                                
│     test-session  · idle                                                          # [bg=#212337]=   [bg=#212337]=   [fg=#37f499 bg=#212337 b]=test-session [bg=#212337]=   [fg=#3b4261 bg=#212337]=· idle [bg=#212337]=                                                       [bg=#212337]=  
│     ›                                                                             # [bg=#212337]=   [bg=#212337]=   [fg=#f1fc79 bg=#212337]=› [bg=#212337]=   [bg=#212337]=                                                                        [bg=#212337]=  
│     model: test-model   search: native   tok: ↑0 ↓0   git: main clean             # [bg=#212337]=   [bg=#212337]=   [fg=#abb4da bg=#212337]=model: test-model [bg=#212337]=    [fg=#abb4da bg=#212337]=search: native [bg=#212337]=    [fg=#f7c67f bg=#212337]=tok: ↑0 ↓0 [bg=#212337]=    [fg=#37f499 bg=#212337]=git: main clean [bg=#212337]=          [bg=#212337]=  
│                                                                                   # [bg=#212337]=
